html overflow fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,10 @@ html,body {
        width: 100%;
      }
 
+html {
+  overflow-x: hidden;
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -17,7 +21,6 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
-  overflow-x: hidden;
 }
 
 @layer utilities {
